# ev3_manipulator

./: .gitignore  LICENSE  README.md
conveyorbelt_msgs/: CMakeLists.txt  package.xml
docker/: Dockerfile  Dockerfile.humble  docker-compose.yml  entrypoint.sh
docker/humble/: Dockerfile  README.md  docker-compose.yml
docker/isaac-sim/: DRIVER_DOWNGRADE.md  README.md  docker-compose.yml  start_isaac.sh
docker/jazzy/: Dockerfile  README.md  docker-compose.yml
ev3_brick/: README.md  sorting.py
ev3_manipulator/: .gitignore  package.xml  setup.cfg  setup.py  trim.py
ev3_manipulator/config/: controller.yaml  ros_gz_bridge_gazebo.yaml
ev3_manipulator/ev3_manipulator/: hardware_interface.py  sorting.py  sorting_node.py
ev3_manipulator/launch/: conveyor.launch.py  display.launch.py  gazebo.launch.py
ev3_manipulator/meshes/: arm_2_1.stl  arm_2_connector_1.stl  arm_3_1.stl  base_link.stl  base_motor_housing_linkage_1.stl  bench_stand_link_1.stl  conveyor_base_linkage_1.stl  conveyor_belt_link_1.stl  conveyor_linkage_link_1.stl  left_arm_linkage_1.stl  left_finger_inner_link_1.stl  left_finger_outer_link_1.stl  left_gear_link_1.stl  left_motor_shaft_link_1.stl  motor_housing_link_1.stl  right_finger_inner_link_1.stl  right_finger_outer_link_1.stl  right_gear_link_1.stl  right_pulley_link1_1.stl  right_pulley_link_1.stl  sensor_housing_link_1.stl
ev3_manipulator/urdf/: manipulator.urdf.xacro  manipulator_control.xacro  manipulator_gazebo.xacro  manipulator_materials.xacro  manipulator_urdf.xacro
ev3_manipulator/worlds/: conveyor.sdf
ev3_manipulator_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ev3_manipulator_moveit/config/: initial_positions.yaml  joint_limits.yaml  (+6 more)
manipulator_ev3_brick/: calculate_inertia.py  package.xml  setup.cfg  setup.py
ros2_conveyorbelt/: CMakeLists.txt  package.xml
ros2_conveyorbelt/include/ros2_conveyorbelt/: ros2gz_conveyorbelt_system.hpp
ros2_conveyorbelt/src/: ros2gz_conveyorbelt_system.cpp
tools/: trim.py
(+51 files in other folders)
