<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_conveyorbelt</name>
  <version>0.0.0</version>
  <description>IFRA-Cranfield (Cranfield University, UK). Package: ROS 2 Conveyor Belt for Gazebo Fortress / GZ Sim</description>

  <author>Mikel Bueno Viso</author>
  <maintainer email="Mikel.Bueno-Viso@cranfield.ac.uk">Mikel Bueno Viso</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>conveyorbelt_msgs</depend>

  <depend>ignition-gazebo6</depend>
  <depend>ignition-math6</depend>
  <depend>ignition-transport11</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
